<resources>
    <string name="app_name">AndroidProje</string>
    <string name="giris">Giriş</string>
    <string name="kaydol">Kaydol</string>
    <string name="parola">Parola</string>
    <string name="parolatekrar">Parola Tekrar</string>
    <string name="todo">TODO</string>
    <string name="kullanici_ad">Ad</string>
    <string name="kullanici_soyad">Soyad</string>
    <string name="kullanici_e_mail">E-mail</string>
    <string name="loginkullanici_email_or_username">Kullanıcı Adı veya E-mail</string>
    <string name="kullanici_nickname">Kullanıcı Adı</string>
    <string name="hesab_n_z_yok_mu_hemen_kaydolun">Hesabınız yok mu? Hemen Kaydolun</string>
    <string name="parolami_unuttum">Parolamı unuttum</string>
    <string name="hos_geldin_user_id">Hos geldin /USER</string>
    <string name="ozlu_soz_1">En zor kararları yalnızca en güçlü iradeler verebilir.</string>
    <string name="anamenutop">Ana menü top menü background</string>
    <string name="yks_geri_sayim">YKS Geri sayım sayacı</string>
    <string name="bunu_unutma">Bunu Unutma</string>
    <string name="z_ld">Çözüldü</string>
    <string name="tyt_net_hesapla">TYT Net Hesapla Buton</string>
    <string name="ayt_net_hesapla">AYT Net Hesapla Buton</string>
    <string name="dakika">Dakika</string>
    <string name="performansim">Performansım</string>
    <string name="gecmis_denemeler_menu_bar_tittle">Geçmiş Denemelerim</string>
    <string name="ayt_deneme_hesapla_menu_bar_tittle">Ayt Deneme Hesapla</string>
    <string name="performansim_scroll">performansım menu scroll</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layour">Tab Layout</string>
    <string name="view_pager">View Page</string>
    <string name="tukrce_net_hesapla">Türkçe</string>
    <string name="TYT_net_hesapla_page">TYT Deneme Net Hesapla</string>
    <string name="tyt_net_hesapla_scroll">tyt deneme hesapla sayfası</string>
    <string name="tyt_deneme_hesapla_page_bar">TYT Deneme Net Hesapla</string>
    <string name="dogru_cevap_sayisi">Doğru Cevap Sayısı</string>
    <string name="yanl_cevap">Yanlış Sayısı</string>
    <string name="bos_sayisi">Boş Sayısı</string>
    <string name="bos_sayisi_textView">Boş</string>
    <string name="matemtaik_net_hesapla">Matematik</string>
    <string name="hesaplaButton">Hesapla</string>
    <string name="ayarlar_button">Ayarlar</string>
    <string name="sifre_tekrar">Şifre Tekrar</string>
    <string name="yeni_sifre">Yeni Şifre</string>
    <string name="mevcut_sifre">Mevcut şifre</string>
    <string name="sifre_degistir">Şifre Değiştir</string>
    <string name="kaydet">KAYDET</string>
    <string name="genel_net">Genel Net</string>
    <string name="soyad_description">Soyad giriniz</string>
    <string name="ad_description">Ad Giriniz</string>
    <string name="gecmis_denemelerime_kaydet">Geçmiş Denemelerime Kaydet</string>
    <string name="net_sayisi">Net sayısı</string>
    <string name="deneme_adi">Deneme Adı</string>
    <string name="ayt_turkce_scroll">Ayt Türkçe Scroll</string>
    <string name="ayt_turkdiliveedebiyati">Türk Dili ve Edebiyatı</string>
    <string name="cografya1">Coğrafya-1</string>
    <string name="tarih_1">Tarih-1</string>
    <string name="secmeligrubutittle">Din Kültürü / Felsefe</string>
    <string name="felsefe_grubu_tittle">Felsefe Grubu</string>
    <string name="cografya2tittle">Coğrafya-2</string>
    <string name="tarih_2_tittle">Tarih-2</string>
    <string name="matematik_2_tittle">Matematik-2</string>
    <string name="geometri_2_tittle">Geometri-2</string>
    <string name="fizik_2_tittle">Fizik-2</string>
    <string name="biyoloji_2_tittle">Biyoloji-2</string>
    <string name="kimya_2_tittle">Kimya-2</string>
</resources>