<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passwordChange">

        <ImageView
            android:id="@+id/main_top_fon_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/anamenutop"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main_top_fon_revize"
            tools:ignore="ImageContrastCheck" />
        <ImageView
            android:id="@+id/performansim_app_logo"
            android:layout_width="88dp"
            android:layout_height="82dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="app logo"

            app:srcCompat="@drawable/app_icon__main_top"
            tools:ignore="HardcodedText,MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/sifre_degistir"
            android:textColor="@color/white"
            android:textSize="39sp"
            app:layout_constraintBottom_toBottomOf="@+id/main_top_fon_ImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/mevcutSifre"
            android:layout_width="408dp"
            android:layout_height="58dp"
            android:layout_marginBottom="69dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mevcut_sifre"
            android:inputType="textPassword"
            android:singleLine="false"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            tools:layout_editor_absoluteX="3dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="408dp"
            android:layout_height="58dp"
            android:layout_marginBottom="69dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/yeni_sifre"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
            tools:layout_editor_absoluteX="3dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="408dp"
            android:layout_height="58dp"
            android:layout_marginBottom="111dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/sifre_tekrar"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            tools:layout_editor_absoluteX="1dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="224dp"
            android:layout_height="68dp"
            android:background="#256DFB"
            android:text="@string/kaydet"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="596dp"
            tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>