<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="410dp"
        android:layout_height="731dp"
        tools:layout_editor_absoluteY="0dp"
        tools:context=".PerformansimPage">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view_pager" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#478BFE"
        android:contentDescription="@string/tab_layour"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="81dp">
        <ImageView
            android:id="@+id/performansim_menu_bar"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Performansım menu bar"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main_top_fon_revize"
            tools:ignore="HardcodedText,ImageContrastCheck" />

        <TextView
            android:id="@+id/performansim_title"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:gravity="center_vertical"
            android:text="@string/performansim"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/top_bar_layout"
            app:layout_constraintTop_toTopOf="@id/top_bar_layout"/>

        <ImageView
            android:id="@+id/performansim_app_logo"
            android:layout_width="86dp"
            android:layout_height="78dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="app logo"
            app:layout_constraintBottom_toBottomOf="@id/performansim_menu_bar"
            app:layout_constraintEnd_toStartOf="@+id/performansim_title"
            app:layout_constraintStart_toStartOf="@id/performansim_menu_bar"
            app:layout_constraintTop_toTopOf="@+id/performansim_menu_bar"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/app_icon__main_top"
            tools:ignore="HardcodedText" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    </RelativeLayout>










